--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Hedi </title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -26,10 +26,9 @@
 <div class="background"></div>
 <div class="container">
   <div class="top">
-    <hr>
-    <p>Hedi</p>
-    <hr>
+
   </div>
+  <p><img class ="image" src ="img/logo.png"/></p>
   <h1>UNDER CONSTRUCTION</h1>
   <h3>PROGRESS</h3>
   <div class="progress-wrapper">
@@ -47,7 +46,6 @@
 </div>
 
 <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
