--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
   <meta property="og:type" content="">
   <meta property="og:url" content="">
   <meta property="og:image" content="">
+  <link href="https://fonts.cdnfonts.com/css/avenir" rel="stylesheet">
+  <style>
+    @import url('https://fonts.cdnfonts.com/css/avenir');
+  </style>
 
   <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
+  <link rel="icon" class ="image" href="img/logo.png">
   <!-- Place favicon.ico in the root directory -->
 
   <link rel="stylesheet" href="css/normalize.css">
@@ -27,9 +31,14 @@
 <div class="container">
   <div class="top">
 
+  <h1><img class ="image" src ="img/logo.png"/> is UNDER CONSTRUCTION</h1>
+
   </div>
-  <p><img class ="image" src ="img/logo.png"/></p>
-  <h1>UNDER CONSTRUCTION</h1>
+  <h2> <center>
+    <!--Get to Know Your Products, Restaurants, Hotels Better with Hedi, Your Online Friend for Honest Reviews.-->
+    Get Honest and Trustworthy Reviews from Hedi - Your Reliable Online Friend</center> </h2>
+
+
   <h3>PROGRESS</h3>
   <div class="progress-wrapper">
     <div class="progress"><span>0%</span></div>
